# face_msgs

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: build.yml
msg/: Face.msg  FaceArray.msg
srv/: Authenticate.srv  DeviceInfo.srv  Enroll.srv  QueryUsersId.srv  RemoveUser.srv
